<resources>
    <string name="app_name">PlacticApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Log In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="username">usaername</string>
    <string name="surnames">surnames</string>
    <string name="email">e-mail</string>
    <string name="password">password</string>
    <string name="confirmPassword">confirmPassword</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">My Profile</string>


    <string name="job_success">Plastic Recicle</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="my_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa. Duis convallis.</string>
    <string name="about_me">About Me</string>
    <string name="contact">Contact</string>
    <string name="skills">Skills</string>
    <string name="ratings">Star Ratings</string>
    <string name="samplereview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa. Duis convallis sem sed turpis elementum auctor.</string>
    <string name="logros">logros</string>
    <string name="avisos">avisos</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_navigation">NavigationActivity</string>

</resources>