<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Login_Fragment">

    <androidx.cardview.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:layout_gravity="center"
        app:cardCornerRadius="34dp"
        android:padding="23dp"
        tools:context=".FirstFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#6AB7BEE3"
            android:padding="@dimen/loginViewsMargin"
            android:orientation="vertical">

            <TextView
                style="@style/headerTextPrimary"
                android:text="Login"
                android:layout_marginTop="@dimen/loginViewsMargin"/>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                app:startIconDrawable="@drawable/ic_email"
                android:layout_height="wrap_content"
                android:hint="@string/login_email_hint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                app:startIconDrawable="@drawable/ic_password"
                android:layout_height="wrap_content"
                android:hint="@string/login_password_hint"
                android:layout_marginTop="@dimen/loginViewsMargin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                style="@style/viewParent"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:minHeight="48dp"
                android:onClick="viewForgotPAssword"
                android:text="Forgot Password?"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/newsMoreTextSize" />

            <Button
                android:id="@+id/loginButton"
                style="@style/loginButton"
                android:text="Login"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"/>

            <TextView
                android:id="@+id/forgotPassword"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:clickable="true"
                android:minHeight="48dp"
                android:text="@string/login_signup_hint"
                android:textAlignment="center"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</FrameLayout>